--- a/templates/index.html
+++ b/templates/index.html
@@ -3,125 +3,121 @@
 
 <head>
     <title>Negocio Pai D'Egua</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/home.css"/>
 </head>
 
 
-<body hgcolor="White" text="Black" background="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQv1pY64qwLmdh_UXw-6JNIeINd-TbFA9dIic9jmGD6PsVi8NTU&usqp=CAU">
-    
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Negocio Pai d'Egua</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<body hgcolor="White" text="Black">
+  
+  <div class=".container-fluid">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <!-- Brand/logo -->
+      <a class="navbar-brand" href="#">
+        <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 40px;" >
+      </a>
       
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Cardápio <span class="sr-only">(current)</span></a>
+      <!-- Links -->
+      <ul class="navbar-nav">
+        <li>
+          <a class="navbar-brand" href="#">Negocio Pai d'Egua</a>   
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="carrinho"> Carrinho </a>
+        <li class="nav-item">
+          <a class="nav-link" href=" ">Cardápio Digital<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="carrinho.html">Carrinho</a>
         </li>
       </ul>
-    </div>
-  </nav>
+    </nav>
+    <br> <br> <br> <br>
 
-  <header>
-    <h1 align="center">Bem-Vindo ao Cardápio!</h1>
-  </header>
+    <h1 align="center" >Cardápio Digital</h1>
+    <p align="center"> Bem vindo ao Cardápio Digital, Abaixo está as melhores comidas da região!!<br> Fique a vontade e faça sua escolha, Bom Apetite!!</p>
 
-  <div class="row row-cols-1 row-cols-md-3" style="margin-top: 50px; margin-left: 50px;" >
-    
+
+  <div class="row row-cols-1 row-cols-md-3" style="margin-top: 50px; margin-left: 50px; margin-right: 50px;" >    
     <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+      <div class="card">
         <img src="../static/image/alimento_1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Combinado 1</h5>
-          <p class="card-text">Frango, batata frita, salada e molho de tomate para acompanhar.</p>
+          <h5 class="card-title">Frango Assado</h5>
+          <p class="card-text">R$ 12,00</p>
           <form action="combinado"  method="post" enctype="multipart/form-data" >
             <input hidden type="text" name="prato" value="combinado_1">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Verificar" ></input>
+            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
           </form>
-
         </div>
       </div>
     </div>
-
     <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+      <div class="card">
         <img src="../static/image/Aperitivo1.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Combinado 2</h5>
-          <p class="card-text">Mistura de doce de cupuaçu com leite e outros acompanhamentos.</p>
+          <p class="card-text"> </p>
           <form action="combinado"  method="post" enctype="multipart/form-data" >
             <input hidden type="text" name="prato" value="combinado_2">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Verificar" ></input>
+            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
           </form>
         </div>
       </div>
     </div>
-
     <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+      <div class="card">
         <img src="../static/image/Aperitivo2.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Combinado 3</h5>
-          <p class="card-text">Bolinho de carne com torta de maçã.</p>
+          <p class="card-text"> </p>
           <form action="combinado"  method="post" enctype="multipart/form-data" >
             <input hidden type="text" name="prato" value="combinado_3">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Verificar" ></input>
+            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
           </form>
         </div>
       </div>
     </div>
-
     <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+      <div class="card">
         <img src="../static/image/Aperitivo3.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Combinado 4</h5>
-          <p class="card-text">Tortilha de varios sabores.</p>
+          <p class="card-text"> </p>
           <form action="combinado"  method="post" enctype="multipart/form-data" >
             <input hidden type="text" name="prato" value="combinado_4">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Verificar"></input>
+            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
           </form>
         </div>
       </div>
     </div>
     <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+      <div class="card">
         <img src="../static/image/Aperitivo4.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Combinado 5</h5>
-          <p class="card-text">Camarões empanados,fritos e assados servidos em um balde.</p>
+          <p class="card-text"> </p>
           <form action="combinado"  method="post" enctype="multipart/form-data" >
             <input hidden type="text" name="prato" value="combinado_5">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Verificar" ></input>
+            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
           </form>
         </div>
       </div>
     </div>
     <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+      <div class="card">
         <img src="../static/image/Aperitivo5.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Combinado 6</h5>
-          <p class="card-text">Pratos exóticos e regionais.</p>
+          <p class="card-text"> </p>
           <form action="combinado"  method="post" enctype="multipart/form-data" >
             <input hidden type="text" name="prato" value="combinado_6">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Verificar"></input>
+            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
           </form>
         </div>
       </div>
     </div>
-
-    <!-- teste -->
-    
-
   </div>
-    
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
