--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href=" ">Cardápio Digital<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="carrinho.html">Carrinho</a>
+          <a class="nav-link" href="carrinho">Carrinho</a>
         </li>
       </ul>
     </nav>
