--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,22 +1,151 @@
-body{
-    background-color:gainsboro;
+html {
+    font-size: 62,5%;
 }
+
+html, body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background:gainsboro;
+}
+
+.container-body{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 5fr 0.3fr; 
+    grid-template-areas: "header header"
+                        "main main"
+                        "footer footer";
+}
+
 
 header {
-    margin: 0 auto;
-    position: relative;
-    width: 980px;
-    padding-bottom: 25px;
-    color: black;
+    background-color: #343A40;
+    grid-area: header;
 }
 
-header h1 {
-    padding-top: 20px;
+.container-header{
+    height: 100%;
 }
 
-.card img{
-    height: 200px;
-    width: auto;
+main{
+    width: 100%;
+    border-bottom: 20.0rem;
+    background: gainsboro;
+    justify-content: center;
+    grid-area: main;
 }
 
 
+
+footer{
+    background-color: #343a40;
+    grid-area: footer;
+}
+
+/* NavBar */
+
+nav a{
+    font-size: 1.3rem;
+}
+
+#logo {
+    font-size: 1.4rem;
+}
+
+/* Cabeçalho - Titulo - Modo de uso*/
+.header-2{
+    background-color: white;
+
+    padding-top: 30px;
+    justify-content: center;
+    text-align: center;
+    
+    width: 100%;
+    padding-bottom: 25vh;
+    height: 15vh;
+    
+
+    display: grid;
+    grid-gap: 5px;
+}
+
+.header-2 p{
+    font-size: 1.4rem;
+}
+.header-2 p1{
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+
+
+ /*=============
+    CARDS
+ ===============*/
+
+.container-main{
+    padding-bottom: 20rem;
+    margin-right: 0;
+    width: 100%;
+    max-width: 980px;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+
+    justify-items: center;
+    align-items: center;
+
+    grid-gap:3.0rem;
+}
+
+
+.container-main > div {
+    justify-self: center;
+    height: 50%;
+    
+}
+
+ 
+.cards {
+    width: 100%;
+    max-width: 980px;
+} 
+
+.cartao {
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 24.0rem;
+    grid-gap: 2.0rem;
+}
+
+.cartao img{
+    height: 14.0rem;
+    width: 100%;
+}
+
+/* .align-pad-left{
+    padding-left: 1.5rem;
+} */
+
+
+
+/* media queries */
+ @media (max-width: 768px) {
+    html{
+        font-size:65.5%;
+    }
+    
+} 
+@media (max-width: 425px) {
+    html{
+        font-size:67%;
+    }
+    
+    .header-2{
+        padding-bottom: 34vh;
+    }
+} 
