--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -2,65 +2,44 @@
 <html>
 
 <head>
-    <title>Combinado 1</title>
+    <title>Lista de Pedidos</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../N/static/css/home.css"/>
+    <link rel="stylesheet" href="../static/css/lista.css"/>
 </head>
-<style>
-    table {
-      border-collapse: collapse;
-    }
 
-    table, th, td {
-      border: 2px solid black;
-    }
-      
-    .button {
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-    }
-    .button1 {
-        background-color: #eee;
-    }
-    .button2 {
-        background-color: #008CBA;
-    }
+<body style="background-color: gainsboro;">
+  
+  <div class="container-body">
 
-</style>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <!-- Brand/logo -->
+          <a class="navbar-brand" href="#">
+            <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 50px;" >
+          </a>
+          <a class="navbar-brand" id="logo" href="#">
+            Negócio Pai d'Egua
+          </a>
+          
+          <!-- Links -->
+          <ul class="navbar-nav">        
+            <li class="nav-item">
+              <a class="nav-link" href="/">Cardápio Digital</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/carrinho">Lista de Pedidos<span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+        </nav>
+    </header>
 
-  <body style="background-color: gainsboro;">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <!-- Brand/logo -->
-      <a class="navbar-brand" href="#">
-        <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 40px;" >
-      </a>
-      
-      <!-- Links -->
-      <ul class="navbar-nav">
-        <li>
-          <a class="navbar-brand" href="#">Negocio Pai d'Egua</a>   
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Cardápio Digitals</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Carrinho<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </nav>
     <main>
       <div class="content" style="text-align: center;">
         <div class="header"></div>
         <div class="header-2" style="margin-top: 5%;">
-          <h1>Seus Pedidos</h1>
+          <h1 id="titulo">Seus Pedidos</h1>
         </div>
         <div class="">
           <center>
@@ -90,16 +69,20 @@
         <div>
           <form  action="formulario" method="post">
             <center>
-              <input value="Comprar" type="submit" class="btn btn-primary"/>
+              <input value="Comprar" type="submit" id="bt-comprar" class="btn btn-primary"/>
             </center>
           </form>
         </div>
       </div>
     </main>
+    
+    <footer></footer>
+  
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</body>
 
 </html>
