--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -2,64 +2,99 @@
 <html>
   <head>
       <title>Formulario Negocio Pai D'Egua</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <link rel="stylesheet" href="../static/css/formulario.css"/>
   </head>
 
-    <body hgcolor="White" text="Black" background="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQv1pY64qwLmdh_UXw-6JNIeINd-TbFA9dIic9jmGD6PsVi8NTU&usqp=CAU">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Negocio Pai d'Egua</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Cardápio <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="carrinho"> Carrinho </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-      <form action="pedido_finalizado" method="post" enctype="multipart/form-data">
-        <center>
-          <br><br>
-          <h1 style="text-align: center;">Formulário de Pagamento</h1>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Nome Completo</label>
-            <input type="text" name="nome" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu nome completo" required>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Marque o número de sua mesa</label>
-            <select class="form-control" name="mesa" id="exampleFormControlSelect1" required>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>            
-            </select>
+  <body hgcolor="White" text="Black">
+    <div class="container-body">
+      <header>
+        <div class=".container-fluid">
+          <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <!-- Brand/logo -->
+            <a class="navbar-brand" href="#">
+              <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 50px;" >
+            </a>
+            <a class="navbar-brand" id="logo" href="#">
+              Negócio Pai d'Egua
+            </a>   
+            
+            <!-- Links -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Cardápio Digital<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="carrinho">Lista de Pedidos</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main>
+        
+        <!-- 
+        <form action="pedido_finalizado" method="post" enctype="multipart/form-data">
+          <div class="form-position">
+            <br><br>
+            <h1 id="titulo">Formulário de Pagamento</h1>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Nome Completo</label>
+              <input type="text" name="nome" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu nome" required>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlSelect1">Marque o número de sua mesa</label>
+              <select class="form-control" name="mesa" id="exampleFormControlSelect1" required>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>            
+              </select>
+            </div>        
+            <div class="form-group">
+              <label for="exampleFormControlSelect2">Selecione Forma de Pagamento</label>
+              <select class="form-control" name="forma_pagamento" id="exampleFormControlSelect2" required>
+                <option>Dinheiro</option>
+                <option>Cartão de Crédito</option>
+                <option>Cartão de Débito</option>            
+              </select>
+            </div>
+            <div>
+              <input type="submit"  class="btn btn-primary" value="Enviar Forma de Pagamento"></input><br><br>
+              <a href="/" class="btn btn-primary" >Cancelar pedido</a>
+            </div>   
           </div>        
-          <div class="form-group">
-            <label for="exampleFormControlSelect2">Selecione Forma de Pagamento</label>
-            <select class="form-control" name="forma_pagamento" id="exampleFormControlSelect2" required>
-              <option>Dinheiro</option>
-              <option>Cartão de Crédito</option>
-              <option>Cartão de Débito</option>            
-            </select>
-          </div>
-          <div>
-            <input type="submit"  class="btn btn-primary" value="Enviar Forma de Pagamento"></input><br><br>
-            <a href="/" class="btn btn-primary" >Cancelar pedido</a>
-          </div>   
-        </center>        
 
-      </form>
+        </form>
+       -->
+        
+        
+        <form name="FormPagamento" id="FormPagamento" action="https://sandbox.pagseguro.uol.com.br/v2/checkout/payment.html" method="post">
+        <input id="BotaoPagamento" type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-pagar-azul-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+        </form>
+
+        <br><br>
+        <?xml version="1.0" encoding="ISO-8859-1"?>
+        <session>
+          <id>620f99e348c24f07877c927b353e49d3</id>
+        </session>
       
+
+    
+      </main>
       
-      
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </body>
+      <footer></footer>
+    
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
+    <!-- PagSeguro scripts -->
+    <script src="Libraries/zepto.min.js"></script>
+    <script type="text/javascript" src=
+    "https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.directpayment.js"></script>
+    <script src="Libraries/Javascript.min.js"></script>
+
+  </body>
 </html>
