--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Negocio Pai D'Egua</title>
+    <title>Negocio Pai d'Egua</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -11,112 +11,132 @@
 
 
 <body hgcolor="White" text="Black">
-  
-  <div class=".container-fluid">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <!-- Brand/logo -->
-      <a class="navbar-brand" href="#">
-        <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 40px;" >
-      </a>
+  <div class="container-body">
+    <header>
+      <div class=".container-fluid">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <!-- Brand/logo -->
+          <a class="navbar-brand" href="#">
+            <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 50px;" >
+          </a>
+          <a class="navbar-brand" id="logo" href="#">
+            Negócio Pai d'Egua
+          </a>   
+          
+          <!-- Links -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href=" ">Cardápio Digital<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="carrinho">Lista de Pedidos</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="header-2">
+        <h1  >Cardápio Digital</h1>
+        <p > Bem vindo ao Cardápio Digital. Abaixo está as melhores comidas da região!!<br>
+          Fique a vontade e faça sua escolha, Bom Apetite!!<br>
+        </p>
+        <p1>**Obs: Após selecionar, os pedidos estarão no "Carrinho" onde você poderá finalizar a comprar e escolher a forma de pagamento.<p1>
+      </div>
       
-      <!-- Links -->
-      <ul class="navbar-nav">
-        <li>
-          <a class="navbar-brand" href="#">Negocio Pai d'Egua</a>   
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href=" ">Cardápio Digital<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="carrinho">Carrinho</a>
-        </li>
-      </ul>
-    </nav>
-    <br> <br> <br> <br>
+      <div >
 
-    <h1 align="center" >Cardápio Digital</h1>
-    <p align="center"> Bem vindo ao Cardápio Digital, Abaixo está as melhores comidas da região!!<br> Fique a vontade e faça sua escolha, Bom Apetite!!</p>
+        <div class="cards container-main"  >    
+          <div class=""> <!-- "col mb-4" -->
+            <div class="cartao">
+              <img src="../static/image/alimento_1.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Frango Assado</h5>
+                <p class="card-text">R$ 12,00</p>
+                <form action="combinado"  method="post" enctype="multipart/form-data" >
+                  <input hidden type="text" name="prato" value="combinado_1">
+                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <div class="cartao">
+              <img src="../static/image/Aperitivo1.png" class="card-img-top" alt="...">
+              <div class="card-body tamanho">
+                <h5 class="card-title">Combinado 2</h5>
+                <p class="card-text">R$ 8,00</p>
+                <form action="combinado"  method="post" enctype="multipart/form-data" >
+                  <input hidden type="text" name="prato" value="combinado_2">
+                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <div class="cartao">
+              <img src="../static/image/Aperitivo2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Combinado 3</h5>
+                <p class="card-text">R$ 5,00</p>
+                <form action="combinado"  method="post" enctype="multipart/form-data" >
+                  <input hidden type="text" name="prato" value="combinado_3">
+                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <div class="cartao">
+              <img src="../static/image/Aperitivo3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Combinado 4</h5>
+                <p class="card-text">R$ 4,00</p>
+                <form action="combinado"  method="post" enctype="multipart/form-data" >
+                  <input hidden type="text" name="prato" value="combinado_4">
+                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <div class="cartao">
+              <img src="../static/image/Aperitivo4.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Combinado 5</h5>
+                <p class="card-text">R$ 11,00</p>
+                <form action="combinado"  method="post" enctype="multipart/form-data" >
+                  <input hidden type="text" name="prato" value="combinado_5">
+                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <div class="cartao">
+              <img src="../static/image/Aperitivo5.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Combinado 6</h5>
+                <p class="card-text">R$ 12,00</p>
+                <form action="combinado"  method="post" enctype="multipart/form-data" >
+                  <input hidden type="text" name="prato" value="combinado_6">
+                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    
+    </aside class="sobre">
+    <!-- sobre -->
+    <footer>
+      <!-- sobre -->
+    </footer>
 
-
-  <div class="row row-cols-1 row-cols-md-3" style="margin-top: 50px; margin-left: 50px; margin-right: 50px;" >    
-    <div class="col mb-4">
-      <div class="card">
-        <img src="../static/image/alimento_1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Frango Assado</h5>
-          <p class="card-text">R$ 12,00</p>
-          <form action="combinado"  method="post" enctype="multipart/form-data" >
-            <input hidden type="text" name="prato" value="combinado_1">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="../static/image/Aperitivo1.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Combinado 2</h5>
-          <p class="card-text"> </p>
-          <form action="combinado"  method="post" enctype="multipart/form-data" >
-            <input hidden type="text" name="prato" value="combinado_2">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="../static/image/Aperitivo2.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Combinado 3</h5>
-          <p class="card-text"> </p>
-          <form action="combinado"  method="post" enctype="multipart/form-data" >
-            <input hidden type="text" name="prato" value="combinado_3">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="../static/image/Aperitivo3.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Combinado 4</h5>
-          <p class="card-text"> </p>
-          <form action="combinado"  method="post" enctype="multipart/form-data" >
-            <input hidden type="text" name="prato" value="combinado_4">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="../static/image/Aperitivo4.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Combinado 5</h5>
-          <p class="card-text"> </p>
-          <form action="combinado"  method="post" enctype="multipart/form-data" >
-            <input hidden type="text" name="prato" value="combinado_5">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="../static/image/Aperitivo5.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Combinado 6</h5>
-          <p class="card-text"> </p>
-          <form action="combinado"  method="post" enctype="multipart/form-data" >
-            <input hidden type="text" name="prato" value="combinado_6">
-            <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
-          </form>
-        </div>
-      </div>
-    </div>
+    
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
