ajustes back end

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,13 +50,13 @@
         <div class="cards container-main"  >    
           <div class=""> <!-- "col mb-4" -->
             <div class="cartao">
-              <img src="../static/image/alimento_1.jpg" class="card-img-top" alt="...">
+              <img src="static/image/alimento_1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Frango Assado</h5>
                 <p class="card-text">R$ 12,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
-                  <input hidden type="text" name="prato" value="combinado_1">
-                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                  <input hidden type="text" name="prato" value="7">
+                  <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -68,8 +68,8 @@
                 <h5 class="card-title">Combinado 2</h5>
                 <p class="card-text">R$ 8,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
-                  <input hidden type="text" name="prato" value="combinado_2">
-                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                  <input hidden type="text" name="prato" value="8">
+                  <input type="submit"  class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -81,8 +81,8 @@
                 <h5 class="card-title">Combinado 3</h5>
                 <p class="card-text">R$ 5,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
-                  <input hidden type="text" name="prato" value="combinado_3">
-                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                  <input hidden type="text" name="prato" value="9">
+                  <input type="submit"  class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -94,8 +94,8 @@
                 <h5 class="card-title">Combinado 4</h5>
                 <p class="card-text">R$ 4,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
-                  <input hidden type="text" name="prato" value="combinado_4">
-                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
+                  <input hidden type="text" name="prato" value="10">
+                  <input type="submit"  class="btn btn-primary" value="Visualizar"></input>
                 </form>
               </div>
             </div>
@@ -107,8 +107,8 @@
                 <h5 class="card-title">Combinado 5</h5>
                 <p class="card-text">R$ 11,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
-                  <input hidden type="text" name="prato" value="combinado_5">
-                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar" ></input>
+                  <input hidden type="text" name="prato" value="11">
+                  <input type="submit"  class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -120,8 +120,8 @@
                 <h5 class="card-title">Combinado 6</h5>
                 <p class="card-text">R$ 12,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
-                  <input hidden type="text" name="prato" value="combinado_6">
-                  <input type="submit" href="Comida/Combinado 1.html" class="btn btn-primary" value="Visualizar"></input>
+                  <input hidden type="text" name="prato" value="12">
+                  <input type="submit"  class="btn btn-primary" value="Visualizar"></input>
                 </form>
               </div>
             </div>
