carrinho funcionando juntamente com adição de produtos

--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -53,7 +53,7 @@
               <tbody>
                 {% for produto in carrinho %}
                 <tr>
-                    <td>{{produto.prato}}</td>
+                    <td>{{produto.nome}}</td>
                     <td>{{produto.preco}}</td>
                 </tr>
                 {% endfor %}
