--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -67,7 +67,7 @@
         </div>
 
         <div>
-          <form  action="formulario" method="post">
+          <form  action="/pedido_finalizado" method="post">
             <center>
               <input value="Comprar" type="submit" id="bt-comprar" class="btn btn-primary"/>
             </center>
