--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,10 @@
         <p > Bem vindo ao Cardápio Digital. Abaixo está as melhores comidas da região!!<br>
           Fique a vontade e faça sua escolha, Bom Apetite!!<br>
         </p>
-        <p1>**Obs: Após selecionar, os pedidos estarão no "Carrinho" onde você poderá finalizar a comprar e escolher a forma de pagamento.<p1>
+        <p1>**Obs: Após selecionar, os pedidos estarão na "Lista de Pedidos" onde você poderá finalizar a comprar e escolher a forma de pagamento.<p1>
       </div>
       
-      <div >
-
+      <center>
         <div class="cards container-main"  >    
           <div class=""> <!-- "col mb-4" -->
             <div class="cartao">
@@ -65,7 +64,7 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo1.png" class="card-img-top" alt="...">
               <div class="card-body tamanho">
-                <h5 class="card-title">Combinado 2</h5>
+                <h5 class="card-title">Doce de cupuaçu</h5>
                 <p class="card-text">R$ 8,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="8">
@@ -78,7 +77,7 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo2.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 3</h5>
+                <h5 class="card-title">Bolinho de Carne</h5>
                 <p class="card-text">R$ 5,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="9">
@@ -91,7 +90,7 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo3.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 4</h5>
+                <h5 class="card-title">Tortilhas</h5>
                 <p class="card-text">R$ 4,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="10">
@@ -104,7 +103,7 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo4.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 5</h5>
+                <h5 class="card-title">Camarão Empanado</h5>
                 <p class="card-text">R$ 11,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="11">
@@ -117,7 +116,7 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo5.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 6</h5>
+                <h5 class="card-title">Pratos Regionais</h5>
                 <p class="card-text">R$ 12,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="12">
@@ -127,11 +126,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </center>
     </main>
     
-    </aside class="sobre">
-    <!-- sobre -->
     <footer>
       <!-- sobre -->
     </footer>
