--- a/templates/pedido_finalizado.html
+++ b/templates/pedido_finalizado.html
@@ -4,51 +4,251 @@
 <head>
     <title>Combinado 1</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../N/static/css/home.css"/>
+    
 </head>
 <style>
-    .button {
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
+  html {
+    font-size: 62,5%;
+}
+
+html, body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background:gainsboro;
+}
+
+.container-body{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 5fr 0.6fr; 
+    grid-template-areas: "header header"
+                        "main main"
+                        "footer footer";
+}
+
+
+header {
+    background-color: #343A40;
+    grid-area: header;
+}
+
+.container-header{
+    height: 100%;
+}
+
+main{
+    width: 100%;
+    border-bottom: 20.0rem;
+    background: gainsboro;
+    justify-content: center;
+    grid-area: main;
+}
+
+
+
+footer{
+    height:100%;
+    background-color: #343a40;
+    grid-area: footer;
+}
+
+/* NavBar */
+
+nav a{
+    font-size: 1.3rem;
+}
+
+#logo {
+    font-size: 1.4rem;
+}
+
+/* Cabeçalho - Titulo - Modo de uso*/
+.header-2{
+    background-color: white;
+
+    padding-top: 30px;
+    justify-content: center;
+    text-align: center;
+    
+    width: 100%;
+    padding-bottom: 30vh;
+    height: 15vh;
+    
+
+    display: grid;
+    grid-gap: 5px;
+}
+
+.header-2 p{
+    font-size: 1.4rem;
+}
+.header-2 p1{
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+
+
+ /*=============
+    CARDS
+ ===============*/
+
+.container-main{
+    padding-bottom: 20rem;    width: 100%;
+    max-width: 980px;
+    
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+
+    justify-items: center;
+    align-items: center;
+
+    grid-gap:8.0rem;
+}
+
+
+.container-main > div {
+    justify-self: center;
+    height: 50%;
+    
+}
+
+ 
+.cards {
+    width: 100%;
+} 
+
+.cartao {
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 24.0rem;
+    grid-gap: 2.0rem;
+}
+
+.cartao img{
+    height: 14.0rem;
+    width: 100%;
+}
+
+/* .align-pad-left{
+    padding-left: 1.5rem;
+} */
+
+.content-grid{
+    padding-top: 2rem;
+    height: 100%;
+
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr;
+
+    justify-items: center;
+    align-items: center;
+    grid-gap: 2rem;
+  }
+
+  .content-box {
+    text-align: center;
+    
+    border-radius: 2rem;
+    border: 100%;
+    padding:0 7rem;
+    padding-bottom: 2rem;
+    background-color: white;
+
+  }
+
+  .content-box h1 {
+    font-size: 3rem;
+    padding-top: 10px;
+    padding-bottom:5rem;
+
+  }
+
+
+/* media queries */
+ @media (max-width: 768px) {
+    html{
+        font-size:65.5%;
     }
-    .button1 {
-        background-color: #4CAF50;
+
+    .header-2 {
+        padding-bottom: 20vh;
     }
-    .button2 {
-        background-color: #008CBA;
+    
+} 
+@media (max-width: 425px) {
+    html{
+        font-size:67%;
     }
+    
+    .header-2{
+        padding-bottom: 25vh;
+    }
+} 
+@media (max-width: 320px) {
+    html{
+        font-size:69%;
+    }
+    
+    .header-2{
+        padding-bottom: 32vh;
+    }
+} 
+    
+  
+
+    
+
 </style>
 
 <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQv1pY64qwLmdh_UXw-6JNIeINd-TbFA9dIic9jmGD6PsVi8NTU&usqp=CAU">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Negocio Pai d'Egua</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="container-body">
+    <header>
+      <div class=".container-fluid">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <!-- Brand/logo -->
+          <a class="navbar-brand" href="#">
+            <img src="../static/image/Negocio - Copia.png" alt="logo" style="width: 50px;" >
+          </a>
+          <a class="navbar-brand" id="logo" href="#">
+            Negócio Pai d'Egua
+          </a>   
+          
+          <!-- Links -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href=" ">Cardápio Digital<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="carrinho">Lista de Pedidos</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Cardápio </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="carrinho"> Carrinho <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
+  <main>
+    <div class="content-grid" >
+      <div class="content-box">
+        <h1>Pedido Finalizado!</h1>
+        <a  href="/" class="btn btn-primary" style="background-color: #4CAF50; border: none"> Voltar Cardapio </a>
+      </div>
     </div>
-  </nav>
-    <h1>Pedido Finalizado!</h1>
+    
 
-    <a  href="/" class="btn btn-primary"> Voltar Cardapio </a>
+  </main>
+
+  <footer></footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
