Interação com Heroku(testando).

--- a/templates/gerenciamento.html
+++ b/templates/gerenciamento.html
@@ -63,10 +63,10 @@
                         <tbody>
                             {% for pedidos in carrinhos["Mesa 1"]["pedidos"] %}
                           <tr>
-                            <td>pedidos.nome</td>
-                            <td>pedidos.preco</td>
-                            <td>pedidos.quantidade</td>
-                            <td>pedidos.total</td>
+                            <td>{{ pedidos.nome }}</td>
+                            <td>{{ pedidos.preco }}</td>
+                            <td>{{ pedidos.quantidade }}</td>
+                            <td>{{ pedidos.total }}</td>
                           </tr>
                             {% endfor %}
                         </tbody>
@@ -92,10 +92,10 @@
                         <tbody>
                           {% for pedidos in carrinhos["Mesa 2"]["pedidos"] %}
                           <tr>
-                            <td>pedidos.nome</td>
-                            <td>pedidos.preco</td>
-                            <td>pedidos.quantidade</td>
-                            <td>pedidos.total</td>
+                            <td>{{ pedidos.nome }}</td>
+                            <td>{{ pedidos.preco }}</td>
+                            <td>{{ pedidos.quantidade }}</td>
+                            <td>{{ pedidos.total }}</td>
                           </tr>
                             {% endfor %}
 
@@ -122,10 +122,10 @@
                         <tbody>
                           {% for pedidos in carrinhos["Mesa 3"]["pedidos"] %}
                           <tr>
-                            <td>pedidos.nome</td>
-                            <td>pedidos.preco</td>
-                            <td>pedidos.quantidade</td>
-                            <td>pedidos.total</td>
+                            <td>{{ pedidos.nome }}</td>
+                            <td>{{ pedidos.preco }}</td>
+                            <td>{{ pedidos.quantidade }}</td>
+                            <td>{{ pedidos.total }}</td>
                           </tr>
                             {% endfor %}
                         </tbody>
@@ -150,10 +150,10 @@
                         <tbody>
                           {% for pedidos in carrinhos["Mesa 4"]["pedidos"] %}
                           <tr>
-                            <td>pedidos.nome</td>
-                            <td>pedidos.preco</td>
-                            <td>pedidos.quantidade</td>
-                            <td>pedidos.total</td>
+                            <td>{{ pedidos.nome }}</td>
+                            <td>{{ pedidos.preco }}</td>
+                            <td>{{ pedidos.quantidade }}</td>
+                            <td>{{ pedidos.total }}</td>
                           </tr>
                             {% endfor %}
                         </tbody>
