--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -48,6 +48,7 @@
                 <tr>
                   <th scope="col" style="color:lightgoldenrodyellow;">Prato</th>
                   <th scope="col" style="color:lightgoldenrodyellow;" >Preço</th>
+                    <th scope="col" style="color:lightgoldenrodyellow;">Quantidade</th>
                 </tr>
               </thead>
               <tbody>
@@ -55,6 +56,7 @@
                 <tr>
                     <td>{{produto.nome}}</td>
                     <td>{{produto.preco}}</td>
+                    <td>{{produto.quantidade}}</td>
                 </tr>
                 {% endfor %}
                 <tr>
